<resources>
    <string name="app_name">PMMS-SX</string>

    <string name="copyright_1">© 2000-2014 SIPSD. </string>
    <string name="copyright_2">版权所有.</string>
    <string name="login">登录</string>
    <string name="doing_login">登录中...</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="remember_me">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="quit_login">退出登录</string>
    <string name="main_title">项目管理</string>
    <string name="main_actionbar_button">筛选</string>
    <string name="check_project">待审核项目</string>
    <string name="enter">进入</string>
    <string name="setting">我的设置</string>
    <string name="status_icon">状态图片</string>
    <string name="over_time">超期</string>
    <string name="filter_image">过滤图片</string>
    <string name="account_null">帐号或密码不能为空！</string>
    <string name="no_network">请联网后重试！</string>
    <string name="back">退后</string>
    <string name="close">关闭</string>

    <string-array name="filter">
        <item>全部类型</item>
        <item>年度计划</item>
        <item>项目状态</item>
    </string-array>

</resources>
