<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/main_listView_linear"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/listView_item_padding"
        android:paddingTop="@dimen/listView_item_padding"
        android:paddingStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/project_status_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="3"
            android:contentDescription="@string/status_icon"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--<TextView-->
                    <!--android:id="@+id/project_time"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/copyright_1"-->
                    <!--android:textColor="@color/main_listView_item_project_time"-->
                    <!--android:textSize="@dimen/main_listView_item_project_time" />-->

                <TextView
                    android:id="@+id/project_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/project_list_content_selector" />

            </LinearLayout>


            <TextView
                android:id="@+id/project_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/copyright_2"
                android:textColor="@color/project_list_status_selector"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bt_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:contentDescription="@string/enter"
            android:src="@drawable/icon_enter" />
    </LinearLayout>

    <ImageView
        android:id="@+id/over_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/main_listView_linear"
        android:contentDescription="@string/over_time"
        android:src="@drawable/icon_overdue" />


</RelativeLayout>
