<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_marginStart="45dp"
        android:layout_marginTop="11dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:visibility="gone" />

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fg01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fg04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_2"
            android:textSize="12sp" />
    </LinearLayout>-->

    <CheckBox
        android:id="@+id/ckBox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etUser"
        android:layout_alignEnd="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="40dp"
        android:background="#31C3BB"
        android:text="@string/login"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/ckBox_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:visibility="gone"
        android:text="@string/auto_login" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/input_padding"
        android:paddingBottom="@dimen/input_size"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_password"
        android:layout_alignStart="@id/etPassword"
        android:layout_alignBottom="@id/etPassword"
        android:layout_marginBottom="@dimen/icon_input_margin"
        android:contentDescription="@string/password" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:paddingStart="@dimen/input_padding"
        android:paddingBottom="@dimen/input_size"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_user"
        android:layout_alignStart="@id/etUser"
        android:layout_alignBottom="@id/etUser"
        android:layout_marginBottom="@dimen/icon_input_margin"
        android:contentDescription="@string/username" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:src="@drawable/app_icon"
        android:layout_above="@+id/etUser"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/login"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>